--- a/CaronteApp/src/app/components/register/register.component.html
+++ b/CaronteApp/src/app/components/register/register.component.html
@@ -1,26 +1,33 @@
-<div class="header">
-  <h1 class="brand">CARONTE</h1>
-</div>
+<div class="bx--grid top">
+  <div class="bx--row header">
+    <h1 class="title">Registrar persona</h1>
+  </div>
 
-<form [formGroup]="crearFormGroup">
-  <div class="bx--grid top">
+  <div class="bx--row">
+    <p>Ingresa los datos de contacto para que puedan ser mostrados en las consultas, <br>
+      registrar información errónea puede entorpecer la búsqueda, así que ten cuidado.
+    </p>
+  </div>
+
+  <hr>
+
+  <form [formGroup]="crearFormGroup">
     <div class="bx--row">
       <div class="bx--col-xs-6">
-        <h1> Información persona desaparecida</h1>
+        <h1>Información desaparecido</h1>
 
         <div class="bx--form-item item-form">
           <div class="bx--col-xs-12">
-            <label for="text-input-3" class="bx--label">Nombres </label>
-            <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Nombres de desaparecido"
-            formControlName="apellidoDesaparecido"  required >
+            <label for="text-input-3" class="bx--label">Nombres</label>
+            <input type="text" class="bx--text-input bx--text-input--light" placeholder="Apellidos de desaparecido"
+              formControlName="nombreDesaparecido" required>
           </div>
         </div>
-
 
         <div class="bx--form-item item-form">
           <div class="bx--col-xs-12">
             <label for="text-input-3" class="bx--label">Apellidos</label>
-            <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Apellidos de desaparecido"
+            <input type="text" class="bx--text-input bx--text-input--light" placeholder="Apellidos de desaparecido"
               formControlName="apellidoDesaparecido" required>
           </div>
         </div>
@@ -28,25 +35,30 @@
         <div class="bx--form-item item-form">
           <div class="bx--col-xs-12">
             <label for="text-input-3" class="bx--label">Edad</label>
-            <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Edad del desaparecido"
+            <input type="text" class="bx--text-input bx--text-input--light" placeholder="Edad del desaparecido"
               formControlName="edadDesaparecido" required>
-
-
           </div>
         </div>
 
         <div class="bx--form-item item-form">
-
           <div class="bx--col-xs-12">
+            <label for="text-input-3 " class="bx--label">Ciudad desaparición</label>
+            <input type="text" class="bx--text-input bx--text-input--light" placeholder="Ciudad desaparición"
+              formControlName="ciudadDesaparicion" required>
+          </div>
+        </div>
 
-
-
-            <label for="text-input-3" class="bx--label">Dirección pérdida </label>
-            <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Donde fue visto/a por ultima vez"
-              formControlName="direccionDesaparicion" required>
-
-
-
+        <div class="bx--form-item item-form">
+          <div class="bx--col-xs-12">
+            <div class="bx--select bx--select--light">
+              <label for="select-id" class="bx--label">País</label>
+              <select class="bx--select-input" formControlName="paisDesaparicion">
+                <option *ngFor="let pais of paises" class="bx--select-option" [value]="pais">{{pais}}</option>
+              </select>
+              <svg class="bx--select__arrow" width="10" height="5" viewBox="0 0 10 5">
+                <path d="M0 0l5 4.998L10 0z" fill-rule="evenodd" />
+              </svg>
+            </div>
           </div>
         </div>
 
@@ -63,11 +75,8 @@
                 <div data-file-container class="bx--file-container"></div>
               </div>
             </div>
-
-
           </div>
         </div>
-
 
       </div>
 
@@ -75,130 +84,74 @@
         <h1>Información de contacto</h1>
 
         <div class="bx--form-item item-form">
-
           <div class="bx--col-xs-12">
-
             <label for="text-input-3" class="bx--label">Nombres </label>
-            <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Nombre del registrante"
+            <input type="text" class="bx--text-input bx--text-input--light" placeholder="Nombre del registrante"
               formControlName="nombreContacto" required>
           </div>
         </div>
+
         <div class="bx--form-item item-form">
           <div class="bx--col-xs-12">
-
             <label for="text-input-3" class="bx--label">Apellidos </label>
-            <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Apellido del registrante"
+            <input type="text" class="bx--text-input bx--text-input--light" placeholder="Apellido del registrante"
               formControlName="apellidoContacto" required>
-
           </div>
-
         </div>
 
+        <div class="bx--form-item item-form">
+          <div class="bx--col-xs-12">
+            <label for="text-input-3" class="bx--label">Dirección </label>
+            <input type="text" class="bx--text-input bx--text-input--light" placeholder="Dirección registrante"
+              formControlName="direccionContacto" required>
+          </div>
+        </div>
 
         <div class="bx--form-item item-form">
-
           <div class="bx--col-xs-12">
-
             <label for="text-input-3 " class="bx--label">Ciudad </label>
-            <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Ciudad del registrante"
+            <input type="text" class="bx--text-input bx--text-input--light" placeholder="Ciudad del registrante"
               formControlName="ciudadContacto" required>
           </div>
         </div>
 
         <div class="bx--form-item item-form">
           <div class="bx--col-xs-12">
-
-            <label for="text-input-3" class="bx--label">Dirección </label>
-            <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Dirección registrante"
-              formControlName="direccionContacto" required>
-
-          </div>
-
-
-        </div>
-
-        <div class="bx--form-item item-form">
-
-          <div class="bx--col-xs-12">
-
-
-
             <div class="bx--select bx--select--light">
               <label for="select-id" class="bx--label">País</label>
-              <select id="select-id" class="bx--select-input">
-                <option class="bx--select-option" value="" disabled selected hidden formControlName="paisContacto">Escoja su país</option>
-
-
-                <option class="bx--select-option" value="Argentina">Argentina </option>
-                <option class="bx--select-option" value="Bolivia">Bolivia </option>
-                <option class="bx--select-option" value="Brasil">Brasil </option>
-                <option class="bx--select-option" value="Chile">Chile </option>
-                <option class="bx--select-option" value="Colombia"> Colombia </option>
-                <option class="bx--select-option" value="Costa Rica">Costa Rica </option>
-                <option class="bx--select-option" value="Cuba">Cuba</option>
-                <option class="bx--select-option" value="Ecuador">Ecuador </option>
-                <option class="bx--select-option" value="El Salvador">El Salvador </option>
-                <option class="bx--select-option" value="Guatemala">Guatemala </option>
-                <option class="bx--select-option" value="Honduras">Honduras</option>
-                <option class="bx--select-option" value="México">México </option>
-                <option class="bx--select-option" value="Nicaragua">Nicaragua</option>
-                <option class="bx--select-option" value="Panamá">Panamá </option>
-                <option class="bx--select-option" value="Paraguay">Paraguay</option>
-                <option class="bx--select-option" value="Puerto Rico">Puerto Rico </option>
-                <option class="bx--select-option" value="Perú">Perú </option>
-                <option class="bx--select-option" value="República Domminicana">República Domminicana </option>
-                <option class="bx--select-option" value="Uruguay">Uruguay </option>
-                <option class="bx--select-option" value="Venezuela">Venezuela </option>
-
-
+              <select class="bx--select-input" formControlName="paisContacto">
+                <option *ngFor="let pais of paises" class="bx--select-option" [value]="pais">{{pais}}</option>
               </select>
               <svg class="bx--select__arrow" width="10" height="5" viewBox="0 0 10 5">
                 <path d="M0 0l5 4.998L10 0z" fill-rule="evenodd" />
               </svg>
             </div>
-
-
-
           </div>
         </div>
 
-
         <div class="bx--form-item item-form">
           <div class="bx--col-xs-12">
-
-            <label for="text-input-3" class="bx--label">Código Zip </label>
-            <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Escriba su código ZIP"
+            <label for="text-input-3" class="bx--label">Código postal</label>
+            <input type="text" class="bx--text-input bx--text-input--light" placeholder="Escriba su código postal"
               formControlName="zipContacto" required />
-
           </div>
-
-
         </div>
 
-
         <div class="bx--form-item item-form">
-
           <div class="bx--col-xs-12">
-
             <label for="text-input-3" class="bx--label">Número telefónico </label>
-            <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Optional placeholder text"
+            <input type="text" class="bx--text-input bx--text-input--light" placeholder="Ingresa número telefónico"
               formControlName="numeroContacto" required>
           </div>
         </div>
 
         <div class="bx--form-item item-form">
           <div class="bx--col-xs-3">
-
-            <label for="text-input-3" class="bx--label">Email (Optional) </label>
-            <input id="text-input-3" type="text" class="bx--text-input bx--text-input--light" placeholder="Optional placeholder text"
-              formControlName="emailContacto" required>
-
+            <label for="text-input-3" class="bx--label">Email</label>
+            <input type="text" class="bx--text-input bx--text-input--light" placeholder="Email"
+              formControlName="emailContacto">
           </div>
-
-
         </div>
-
-
 
       </div>
     </div>
@@ -206,10 +159,11 @@
     <div class="bx--row top">
       <div class="bx--offset-xs-5 bx--col-xs-3">
         <button class="bx--btn bx--btn--secondary" type="reset">Limpiar</button>
-        <button (click)="dataForm()" class="bx--btn bx--btn--primary" type="submit" enabled>Enviar</button>
+        <button (click)="dataForm()" class="bx--btn bx--btn--primary" enabled>Enviar</button>
       </div>
     </div>
-  </div>
-</form>
+
+  </form>
+</div>
 
 <app-footer></app-footer>
