--- a/CaronteApp/src/app/components/register/register.component.scss
+++ b/CaronteApp/src/app/components/register/register.component.scss
@@ -7,18 +7,14 @@
 }
 
 .header {
-  padding: 120px;
-  margin-bottom: 50px;
-  width: 100%;
-  height: 350px;
-  background-image: url('../../../assets/img/bg2.jpg');
+  margin: 30px 0px 30px 0px;
 }
 
-.brand {
-  text-align: center;
+.title {
+  display: block;
   font-weight: bold;
-  font-size: 5.25rem;
-  color: #41d6c3;
 }
 
- 
+hr {
+  margin: 50px 0px;
+}
