--- a/CaronteApp/src/app/components/card/card.component.html
+++ b/CaronteApp/src/app/components/card/card.component.html
@@ -30,7 +30,7 @@
       <li><strong>Miedo: </strong>{{ dataApi.dataApi[0].faceAttributes.emotion.fear }}</li>
     </ul>
     <ul>
-      <li><strong>Felicidad: </strong>{{ dataApi.dataApi[0].faceAttributes.emotion.anger }}</li>
+      <li><strong>Felicidad: </strong>{{ dataApi.dataApi[0].faceAttributes.emotion.happiness }}</li>
       <li><strong>Neutral: </strong>{{ dataApi.dataApi[0].faceAttributes.emotion.neutral }}</li>
     </ul>
     <ul>
