Servicio FaceList creado

--- a/CaronteApp/src/app/components/home/home.component.html
+++ b/CaronteApp/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<video autoplay loop id="bgvid">
+<video autoplay loop id="bgvid" poster="../../../assets/img/bg.jpg">
 
   <source src="../../../assets/video/header-video.mp4" type="video/mp4">
 
