--- a/CaronteApp/src/app/components/search/search.component.html
+++ b/CaronteApp/src/app/components/search/search.component.html
@@ -10,6 +10,9 @@
     </p>
   </div>
 
+  <button class="bx--btn bx--btn--secondary"
+  type="button" (click)="put()" >Test FaceList</button>
+
   <hr>
 
   <div class="bx--row">
