Servicio AddFace creado

--- a/CaronteApp/src/app/components/search/search.component.html
+++ b/CaronteApp/src/app/components/search/search.component.html
@@ -10,8 +10,14 @@
     </p>
   </div>
 
+  <!-- <button class="bx--btn bx--btn--secondary"
+  type="button" (click)="put()" >Test FaceList</button> -->
+
+  <!-- <button class="bx--btn bx--btn--secondary"
+  type="button" (click)="FindSimilar()" >Test FindSimilar</button> -->
+
   <button class="bx--btn bx--btn--secondary"
-  type="button" (click)="put()" >Test FaceList</button>
+  type="button" (click)="addFace()" >Test FindSimilar</button>
 
   <hr>
 
