Servicio FindSimilar creado

--- a/CaronteApp/src/app/components/search/search.component.html
+++ b/CaronteApp/src/app/components/search/search.component.html
@@ -13,11 +13,11 @@
   <!-- <button class="bx--btn bx--btn--secondary"
   type="button" (click)="put()" >Test FaceList</button> -->
 
-  <!-- <button class="bx--btn bx--btn--secondary"
-  type="button" (click)="FindSimilar()" >Test FindSimilar</button> -->
-
   <button class="bx--btn bx--btn--secondary"
-  type="button" (click)="addFace()" >Test FindSimilar</button>
+  type="button" (click)="findSimilar()" >Test FindSimilar</button>
+
+  <!-- <button class="bx--btn bx--btn--secondary"
+  type="button" (click)="addFace()" >Add Face</button> -->
 
   <hr>
 
@@ -30,11 +30,11 @@
     </div>
   </div>
 
-  <div class="bx--row">
+  <!-- <div class="bx--row">
     <div class="bx--col-xs-10" *ngFor="let user of users">
       <pre>{{ user.data | json}}</pre>
     </div>
-  </div>
+  </div> -->
 
 </div>
 
