Componente Outcome creado

--- a/CaronteApp/src/app/components/search/search.component.html
+++ b/CaronteApp/src/app/components/search/search.component.html
@@ -13,9 +13,6 @@
   <button class="bx--btn bx--btn--secondary"
   type="button" (click)="findSimilar()" >Test FindSimilar</button>
 
-  <!-- <button class="bx--btn bx--btn--secondary"
-  type="button" (click)="addFace()" >Add Face</button> -->
-
   <hr>
 
   <div class="bx--row">
@@ -34,5 +31,7 @@
   </div> -->
 
 </div>
+
+<app-outcome></app-outcome>
 
 <app-footer></app-footer>
