--- a/CaronteApp/src/app/components/outcome/outcome.component.html
+++ b/CaronteApp/src/app/components/outcome/outcome.component.html
@@ -16,6 +16,7 @@
           <li><strong>Apellido: </strong> {{ user[0][0].info_desaparecido.apellido }}</li>
           <li><strong>Edad: </strong> {{ user[0][0].info_desaparecido.edad }}</li>
           <li><strong>País: </strong> {{ user[0][0].info_desaparecido.pais }}</li>
+          <li><strong>Ciudad: </strong> {{ user[0][0].info_desaparecido.direccion }}</li>
         </ul>
 
         <hr>
